--- a/package.json
+++ b/package.json
@@ -4,24 +4,26 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --tunnel",
-    "web": "expo start --web"
+    "web": "expo start --web --tunnel"
   },
   "dependencies": {
     "dripsy": "^3.5.3",
     "expo": "~43.0.2",
+    "expo-dark-mode-switch": "^0.0.2",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@expo/ngrok": "^4.1.0",
     "@expo/webpack-config": "^0.16.10",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5",
-    "@expo/ngrok": "^4.1.0"
+    "typescript": "~4.3.5"
   },
   "private": true
 }
